tests/requests/invalid/007.py
from gunicorn import LimitRequestHeaders
request = LimitRequestHeaders
